# autovqc

./: README.md  example.py  pyproject.toml
autovqc/: __init__.py  circuit.py  operator.py  qubit.py
data/: LiH.toml
tests/: test_all.py  test_autovqc.py  test_operator.py  test_qubit.py
